--- a/repos/MELHARFI-2D-Game-Engine/01-initializing.html
+++ b/repos/MELHARFI-2D-Game-Engine/01-initializing.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Author Web Page</title>
+        <title>MELHARFI 2D Game Engine - 01. Initializing engine</title>
         <link rel="stylesheet" href="../../style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
