--- a/repos/ECLP/description.html
+++ b/repos/ECLP/description.html
@@ -87,7 +87,7 @@
                     <p><b><h3>Description</h3></b></p>
                     <p>This command Line parser use 2 ways of parsing.</p>
                     <p>Either from a string command or from an array like the one passed to the main method as parameters.</p>
-                    <p>just reference ECLP by nuget or be dowloading the latest release and add it to your references.</p>
+                    <p>just reference ECLP by nuget or by dowloading the latest release and add it to your references.</p>
                     <p>Install-Package ECLP -Version 1.4.0</p>
                     <p><a href="https://www.nuget.org/packages/ECLP/1.4.0">Nuget</a></p>
                     <p>Or download the release from the git source and add it to the referenced libraries of your application, <a href="https://github.com/melharfi/ECLP/releases">Release</a></p>
