--- a/repos/ECLP/description.html
+++ b/repos/ECLP/description.html
@@ -90,7 +90,7 @@
                     <p>just reference ECLP by nuget or by dowloading the latest release and add it to your references.</p>
                     <p>Install-Package ECLP -Version 1.4.0</p>
                     <p><a href="https://www.nuget.org/packages/ECLP/1.4.0">Nuget</a></p>
-                    <p>Or download the release from the git source and add it to the referenced libraries of your application, <a href="https://github.com/melharfi/ECLP/releases">Release</a></p>
+                    <p><a href="https://github.com/melharfi/ECLP/releases">Release</a></p>
                     <p><b><li>Verbs</li></b></p>
                     <p>ECLP defin 5 types of arguments as Verbs.</p>
                     <p>Mean that a command line can have 5 different patterns as bellow :</p>
