--- a/repos/ECLP/description.html
+++ b/repos/ECLP/description.html
@@ -93,7 +93,7 @@
                     <p><a href="https://github.com/melharfi/ECLP/releases">Release</a></p>
                     <p><b><li>Verbs</li></b></p>
                     <p>ECLP defin 5 types of arguments as Verbs.</p>
-                    <p>Mean that a command line can have 5 different patterns as bellow :</p>
+                    <p>Mean that a command line can have 5 different patterns of arguments as bellow :</p>
                     
                     <p><b>Type 1) Args</b> are common arguments, could be any referenced primitif type like string, int, bool, float, and char.</p>
                     <p>ex "hello 5 true 3,5 T".</p>
