--- a/repos.html
+++ b/repos.html
@@ -106,6 +106,18 @@
                     <button type="button" class="btn btn-primary" onclick="window.location = 'repos/ECLP/description.html'">See Wiki>></button>
                   </div>
 
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/RSA-Encrypt-Decrypt/master/resources/logo.ico" width="100" height="100"></p>
+                    <p><b><h3>RSA Encrypt Decrypt</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/RSA-Encrypt-Decrypt" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>Tool to encrypt and decrypt using RSA encryption.</p>
+                    <button type="button" class="btn btn-primary" onclick="window.location = 'repos/RSA-Encrypt-Decrypt/description.html'">See Wiki>></button>
+                  </div>
+
                 </div>
               </div>
             </div>
