--- a/repos/MELHARFI-2D-Game-Engine/description.html
+++ b/repos/MELHARFI-2D-Game-Engine/description.html
@@ -91,6 +91,7 @@ Don't worry about many details in the usual way or adding some complex third par
                     <p>It's commonly useful for beginners and for advanced people, as I’ll show you my own game that I build with it (at the end of that topic).</p>
                     <p>The library is built in C# language so you can use it in any .NET language such as VB.NET while it supports Framework 4.0 or higher and Visual Studio 2015 or higher (some lambda expression not handled by VS 2013 or older).</p>
                     <p>It's the first and unique library for graphics using GDI+ as far as I know.</p>
+                    <p>Licensed with <a href="http://choosealicense.com/licenses/mit">MIT</a></p>
                   </div>
                   <div class="repos-content-sub">
                     <p><b>Features</b></p>
