--- a/repos.html
+++ b/repos.html
@@ -76,6 +76,7 @@
               <div class="col-md-12">
                 <h2>Repos</h2>
                 <div class="repos-content">
+
                   <div class="repos-content-job-title" style="color: darkcyan;">
                     <p><img src="https://raw.githubusercontent.com/melharfi/MELHARFI-2D-Game-Engine/master/assets/logo.png"></p>
                     <p><b><h3>MELHARFI-2D-Game-Engine</h3></b></p>
@@ -91,6 +92,7 @@
                     <p>It's the first and unique library for graphics using GDI+ as far as I know.</p>
                     <button type="button" class="btn btn-primary" onclick="window.location = 'repos/MELHARFI-2D-Game-Engine/description.html'">See Wiki>></button>
                   </div>
+                  <hr>
 
                   <div class="repos-content-job-title" style="color: darkcyan;">
                     <p><img src="https://raw.githubusercontent.com/melharfi/ECLP/master/resources/logo.png"></p>
@@ -105,6 +107,7 @@
                     <p><b>Args, Flags, Properties, Collections, ExCollections</b></p>
                     <button type="button" class="btn btn-primary" onclick="window.location = 'repos/ECLP/description.html'">See Wiki>></button>
                   </div>
+                  <hr>
 
                   <div class="repos-content-job-title" style="color: darkcyan;">
                     <p><img src="https://raw.githubusercontent.com/melharfi/RSA-Encrypt-Decrypt/master/resources/logo.ico" width="100" height="100"></p>
@@ -117,7 +120,59 @@
                     <p>Tool to encrypt and decrypt using RSA encryption.</p>
                     <button type="button" class="btn btn-primary" onclick="window.location = 'repos/RSA-Encrypt-Decrypt/description.html'">See Wiki>></button>
                   </div>
+                  <hr>
 
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/Nova/master/Resources/client1.PNG" width="100" height="71"></p>
+                    <p><b><h3>NOVA</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/Nova" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>Nova is a 2D game made with my 2D Game Engine.</p>
+                    <button type="button" class="btn btn-primary" onclick="window.location = 'repos/Nova/description.html'">See Wiki>></button>
+                  </div>
+                  <hr>
+
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><b><h3>EvilBot (Discontinued 2015)</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/EvilBot" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>Android auto install app + rating 5 stars + 1G mark + random comment with connection with different google user account found in database (you have to add account yourself).</p>
+                    <p>This repo need Genymotion installed to handle android device "should be created and called device1" database android.sql is inside</p>
+                    <p>1-install genymotion + (VirtualBox if it's not already installed) 2-create device with android version like 4.4 or whatever and give a name "device1" 3-lunch the device 4-app store is note included by default, click on "Open Gapps" top right corner 5-create mysql database named 'android', user root and blank password 6-execute sql file android</p>
+                    <b>No wiki</b>
+                  </div>
+                  <hr>
+
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/Carta_V1.4.205/master/1.PNG" width="200" height="122"></p>
+                    <p><b><h3>Carta_V1.4.205</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/Carta_V1.4.205" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>Morrocan game card v1 in VB6 solo or in lan.</p>
+                    <b>No wiki</b>
+                  </div>
+                  <hr>
+
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/The-MatrixJs/master/matrix.PNG" width="200" height="184"></p>
+                    <p><b><h3>The-MatrixJs</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/The-MatrixJs" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>web page simlating The-Matrix art using Javascript + HTML (2005).</p>
+                    <b><a href="repos/The-MatrixJs/matrix.htm">Link</a></b>
+                  </div>
                 </div>
               </div>
             </div>
