--- a/repos/The-MatrixJs/matrix.htm
+++ b/repos/The-MatrixJs/matrix.htm
@@ -8,17 +8,17 @@
 <body bgcolor="#000000" text="#FFFFFF" scroll=no>
 <script Language="JavaScript">
 var a=new Array(11);
-a[0]="AZÂµ!Â§Â²&jH9";
-a[1]="wmlkÃ©~#0JK";
-a[2]="*@Å“WXCV8nb";
-a[3]="QSqp â„¢Â£Â¥i4";
-a[4]="YUIOsLâ‚¬Â±ÃŸP";
-a[5]="uyÂ©|zÂ°aÃ·Å’Å“";
-a[6]="vxÂ£$Â¥Â¤ML5d";
-a[7]="Ã¹%^RT6hg3f";
-a[8]="Ã DFGâ‚¬ BN7Â¡";
-a[9]="Â¢treÂ®*}12Ã¦";
-a[10]="+o-*/EcÃ˜4@";
+a[0]="AZµ!§²&jH9";
+a[1]="wmlké~#0JK";
+a[2]="*@œWXCV8nb";
+a[3]="QSqp ™£¥i4";
+a[4]="YUIOsL€±ßP";
+a[5]="uy©|z°a÷Œœ";
+a[6]="vx£$¥¤ML5d";
+a[7]="ù%^RT6hg3f";
+a[8]="àDFG€ BN7¡";
+a[9]="¢tre®*}12æ";
+a[10]="+o-*/EcØ4@";
 var b=c=d=e=f=g=h=i=-1000;
 pl=100;
 ctrl=1;
@@ -86,7 +86,7 @@ function div(xom)                                                               
 		loop2=0;
 		for(loop=1+loop2;loop<10+loop2;loop++)
 			{			
-			eval("calc"+loop).innerHTML="<font face='"+face+"' size='"+size+"'><"+car+"><font color='#004400'>"+al()+"<br>"+al()+"<br>"+al()+"<br>Â£<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>3<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>Âµ<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>Â¥<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>0<br>"+al()+"<br>"+al()+"</"+car+"></font>";
+			eval("calc"+loop).innerHTML="<font face='"+face+"' size='"+size+"'><"+car+"><font color='#004400'>"+al()+"<br>"+al()+"<br>"+al()+"<br>£<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>3<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>µ<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>¥<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>"+al()+"<br>0<br>"+al()+"<br>"+al()+"</"+car+"></font>";
 			loop++;
 			}
 		setTimeout("div(1)",100);
@@ -95,7 +95,7 @@ function div(xom)                                                               
 		for(loop=2+loop2;loop<10+1+loop2;loop++)
 			{
 			layer="calc"+loop;
-			eval(layer).innerHTML="<font face='"+face+"' size='"+size+"'><"+car+"><font color='#117711'>"+al()+"</font><br><font color='#118811'>"+al()+"</font><br><font color='#118811'>"+al()+"</font><br><font color='#008800'>0</font><br><font color='#009900'>"+al()+"</font><br><font color='#119911'>"+al()+"</font><br><font color='#119911'>"+al()+"</font><br><font color='#119911'>5</font><br><font color='#11aa11'>"+al()+"</font><br><font color='#11aa11'>&nbsp;</font><br><font color='#11aa11'>"+al()+"</font><br><font color='#11aa11'>$</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11bb11'>8</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11cc11'>Ã§</font><br><font color='#11cc11'>"+al()+"</font><br><font color='#00dd00'>&</font><br><font color='#00ff00'>"+al()+"</font><br><font color='#33ff33'>4</font><br><font color='#99ff99'>"+al()+"</font><br><font color='#bbffbb'>"+al()+"</font><br><font color='#eeffee'>"+al()+"</font><br><font color='#eeffee'>"+al()+"</"+car+">";
+			eval(layer).innerHTML="<font face='"+face+"' size='"+size+"'><"+car+"><font color='#117711'>"+al()+"</font><br><font color='#118811'>"+al()+"</font><br><font color='#118811'>"+al()+"</font><br><font color='#008800'>0</font><br><font color='#009900'>"+al()+"</font><br><font color='#119911'>"+al()+"</font><br><font color='#119911'>"+al()+"</font><br><font color='#119911'>5</font><br><font color='#11aa11'>"+al()+"</font><br><font color='#11aa11'>&nbsp;</font><br><font color='#11aa11'>"+al()+"</font><br><font color='#11aa11'>$</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11bb11'>8</font><br><font color='#11bb11'>"+al()+"</font><br><font color='#11cc11'>ç</font><br><font color='#11cc11'>"+al()+"</font><br><font color='#00dd00'>&</font><br><font color='#00ff00'>"+al()+"</font><br><font color='#33ff33'>4</font><br><font color='#99ff99'>"+al()+"</font><br><font color='#bbffbb'>"+al()+"</font><br><font color='#eeffee'>"+al()+"</font><br><font color='#eeffee'>"+al()+"</"+car+">";
 			loop++;
 			}
 		loop2+=10;
