--- a/repos.html
+++ b/repos.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
                     <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b>></a>
+                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b></a>
                   </div>
                 </div>
               </nav>
@@ -85,7 +85,7 @@
                     <a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
                   </div>
                   <div class="repos-content-sub">
-                    <p>Description : MELHARFI is a standalone DLL to create 2D games easily or add an animated graphics to your application.</p>
+                    <p>Description : MELHARFI is a standalone DLL to create 2D games easily or to add an animated graphics to your application.</p>
                     <p>Don't worry about many details in the usual way or adding a complex third party application, only to make some graphics in your form.</p>
                     <p>It's commonly useful for beginners and for advanced people, as I’ll show you my own game that I build with it (at the end of that topic).</p>
                     <p>The library is built in C# language so you can use it in any .NET language such as VB.NET while it supports Framework 4.0 or higher and Visual Studio 2015 or higher (some lambda expression not handled by VS 2013 or older).</p>
