--- a/repos/MELHARFI-2D-Game-Engine/08-fillpolygon.html
+++ b/repos/MELHARFI-2D-Game-Engine/08-fillpolygon.html
@@ -23,8 +23,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="../../index.html">HOME</a>
-                    <a class="nav-item nav-link" href="../../repos.html">REPOS</a>
+                    <a class="nav-item nav-link" href="index.html">HOME</a>
+                    <a class="nav-item nav-link" href="repos.html"><b>REPOS</b></a>
                   </div>
                 </div>
               </nav>
